--- a/src/pages/Home/Service/Service.css
+++ b/src/pages/Home/Service/Service.css
@@ -23,3 +23,8 @@
     text-decoration: none;
     width: 100%;
 }
+@media screen and (max-width:700px) {
+    .single-service{
+       width: 100%; 
+    }
+}
