--- a/src/pages/Home/Servicec/Services.css
+++ b/src/pages/Home/Servicec/Services.css
@@ -14,3 +14,9 @@
     text-align: center;
     margin-bottom: 40px;
 }
+@media screen and (max-width:700px) {
+    .service-container{
+        grid-template-columns: auto;
+        padding: 0 50px;
+    }
+}
