--- a/src/pages/Home/Service/Service.css
+++ b/src/pages/Home/Service/Service.css
@@ -1,7 +1,8 @@
 .single-service{
     width: 430px;
-    height: 600px;
-    border: 1px solid lightgrey;
+    height: 550px;
+    /* border: 1px solid lightgrey; */
+    background-color: rgb(247, 247, 247);
     border-radius: 20px;
     position: relative;
     /* padding: 0 5px; */
@@ -9,17 +10,26 @@
 .single-service img{
     width: 100%;
     height: 300px;
-    border-radius: 20px;
+    border-radius: 10px;
     
+}
+.single-service .title{
+   
+    padding: 10px;
+}
+.single-service p{
+    margin-top: 0px ;
+    margin-left: 10px ;
 }
 .service-btn{
     padding: 10px 70px;
+    text-align: center;
     border: none;
-    background-color: rgb(190, 184, 182);
-    color: white;
+    background-color: #66CC66;
+    color: black;
     position: absolute;
     bottom: 0;
-    border-radius: 20px;
+    border-radius: 10px;
     text-decoration: none;
     width: 100%;
 }
